# balloon_sim

./: .gitignore  .pylintrc  pyproject.toml
src/: main.py
src/animation/: __init__.py  animation.py
src/simulation/: __init__.py  balloon.py  trajectory.py
src/weather_api/: __init__.py  base_api.py  open_weather_map.py
tests/: test_animation.py  test_simulation.py  test_weather_api.py
